# untrained_pred

./: .gitignore  README.md  config.yaml  dummy.ipynb  main.py  pyproject.toml  setup.py
my_utils/: alignment_metrics.py  model_helpers.py  nsd_dataset.py  pyproject.toml
my_utils/my_utils/: alignment_metrics.py  imagenet_probe.py  model_helpers.py  neural_data.py  sparsify.py
weights_init/: expt.py  load_data.ipynb  plots.ipynb  plots_old.ipynb  seeds.py  triplen_eval.py  weights_alignment_eval.py
weights_init/.ipynb_checkpoints/: load_data-checkpoint.ipynb  plots-checkpoint.ipynb
weights_init/expt_results/neural_predictivity/: kaiming_n.csv  kaiming_u.csv  normal.csv  orthogonal.csv  trained.csv  uniform.csv  xavier_n.csv  xavier_u.csv
weights_init/expt_results/rsa/: kaiming_n.csv  kaiming_u.csv  normal.csv  orthogonal.csv  trained.csv  uniform.csv  xavier_n.csv  xavier_u.csv
weights_init/results/: weights_brain_eval.csv  weights_brain_eval_all_layers.csv  weights_brain_eval_subsampled.csv  weights_brain_eval_temp.csv  weights_lin_pred.csv
weights_sparsity/: expt_random_weights.py  expt_sparsity_performance.py  expt_sparsity_performance_vgg.py  expt_sparsity_performance_vit.py  plot.ipynb  psuedocode.txt
