[project]
name = "untrained-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "my-utils",
    "numpy>=2.3.4",
    "nvitop>=1.5.3",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "setuptools>=80.9.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]

